--- a/examples/complete/.terraform-docs.yml
+++ b/examples/complete/.terraform-docs.yml
@@ -3,7 +3,7 @@ version: '>= 0.14.0'
 formatter: markdown table
 
 content: |-
-  # Scaffolding Example
+  # Tenant Example
 
   To run this example you need to execute:
 
